--- a/ctf.html
+++ b/ctf.html
@@ -31,7 +31,7 @@
         <h3>
           <a id="welcome-to-ctf" class="anchor" href="#welcome-to-ctf" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>CTF Writeups</h3>
 
-        <p>This room contains a lot of writeups of Capture the Flag from other authors. It shall be the easiest way to train your <a>Hacking Skills</a></p>
+        <p>This room contains a lot of writeups of Capture the Flag from other authors. It shall be the easiest way to train your <a>Hacking Skills</a>.</p>
         
 
       </section>
